Working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -586,89 +586,91 @@
             <dt>Grass Toss Staff</dt>
             <dd>Trickier to use than Grass Gain Staff, but can be used in a similar manner by swinging it at monsters that reflect magic.<br>Such monsters include Taishodon, Escargon, Asst. Manager, and Manager.<br>Make use of Tiger Tossers or Bomb type monsters to level up a Shopkeeper.<br>Other grasses like Poison Grass, Twisty Grass, and Warp Grass can be inserted, but Strength Grass should be prioritized.</dd>
             <dt>Miss Staff</dt>
-            <dd></dd>
+            <dd>Lowers a monster's regular attack accuracy to 0%, making all of their attacks miss.<br>Monster attacks are guaranteed to connect even if they are under the effect of this staff when Shiren is paralyzed,<br>so it's not as effective against monsters like Monarch Tusker, Stun Scorpion, Rock Beast, and Boulder Beast.<br>Doesn't affect the accuracy of projectiles or special attacks.</dd>
             <dt>Fire Staff</dt>
-            <dd></dd>
+            <dd>Effective against Cave Mamels, leveled up enemies, and monsters in hallways.<br>Can be used to destroy troublesome statues or scrolls stuck to the ground within 5 tiles.<br>Use a Knockback Staff after swinging a Fire Staff when an enemy is close to deal 80~100 damage in a single turn.</dd>
             <dt>Quarter Staff</dt>
-            <dd></dd>
+            <dd>Reduces a monster's HP to 1/4 of its current amount.<br>Great when fighting monsters with lots of HP, or when you lack offensive power.</dd>
             <dt>Slow Staff</dt>
-            <dd></dd>
+            <dd>Allows you to defeat enemies without taking damage by looping attack → step back → attack.<br>Be careful against enemies with ranged attacks, or encountering an enemy in the opposite direction.</dd>
             <dt>Posession Staff</dt>
-            <dd></dd>
+            <dd>Among the best staves in the game once you master how to use it.<br>Can be used to level up enemies, guard Shiren while he regenerates HP,<br>collect items by taking control of Armordillo or Kengo family monsters,<br>remove curses from items by taking control of a Straw Voodoll family monster,<br>gather wooden or iron arrows by taking control of a Bow Boy or Bow Cart,<br>obtain riceballs by taking control of a Nigiri Master, or use it to walk while ignoring traps, etc.</dd>
             <dt>Seal Staff</dt>
-            <dd></dd>
+            <dd>Prevents a monster from being able to use their special attack.<br>Nice to have when facing Kengo family monsters, Monsoon Doll, Nigiri Master, Tiger Chucker, etc.</dd>
           </dl>
           <h3 id="other">Scroll</h3>
           <dl>
             <dt>Blank Scroll</dt>
-            <dd></dd>
+            <dd>One of the best items in the game. Can be used as any scroll you've read in the past, including Extinction Scroll.</dd>
             <dt>Extinction Scroll</dt>
-            <dd></dd>
+            <dd>Makes a monster vanish from the dungeon for the duration of the current adventure.<br>Some nice options include Archdragon, Cranky Tank, Porkton, Shihan, and Typhoon.<br>Think carefully before you throw it, and watch out for Copycat Mask monsters disguised as the target monster.</dd>
             <dt>Plating Scroll</dt>
-            <dd></dd>
+            <dd>Can be used to repair bracelets or add a red 金 seal to equipment.</dd>
             <dt>Sanctuary Scroll</dt>
-            <dd></dd>
+            <dd>One of these is usually enough to handle an entire Monster House.<br>However, you still need to watch out for monsters that have ranged attacks.</dd>
             <dt>Slumber Scroll</dt>
-            <dd></dd>
+            <dd>Great for emergencies, such as when you're surrounded by monsters from stepping on a Summon Trap.<br>Note that monsters will wake up with increased movement speed after 10 turns.<br>Also makes for an effective synthesis seal.</dd>
             <dt>Decoy Scroll</dt>
-            <dd></dd>
+            <dd>Great for emergencies. No downsides like Slumber Scroll, and can be used to evade Archdragon fire.<br>Note that shadows will fail to appear if the current floor is at the monster/character limit,<br>and monsters like Ironhead and Cranky Tank can attack through the shadows.</dd>
             <dt>Fear Scroll</dt>
-            <dd></dd>
+            <dd>Great for emergencies. Limited to a 1 tile radius around Shiren, but effective against enemies inside walls.</dd>
             <dt>Identify Scroll</dt>
-            <dd></dd>
+            <dd>Particularly nice for this dungeon, since most item categories are found unidentified.<br>Prioritize grasses first in search of a Life Grass to make a Healing Sword, and then items like bracelets and pots.<br>Staves and equipment should only be identified using this scroll during the second half of the dungeon.</dd>
             <dt>Restock Scroll</dt>
-            <dd></dd>
+            <dd>Read it inside shops to restock or change the items for sale.<br>Save it for shops between 71~90F if you're interested in obtaining an Upgrade Pot.</dd>
             <dt>Wall Collapse Scroll</dt>
-            <dd></dd>
+            <dd>Used to steal from shops or to search for Golden Stairs.<br>Recommended to read it on 9~10F, 24~29F, and 90~95F when searching for Golden Stairs.<br>Can also be used to quickly find a path to the stairs when Archdragon fire is wearing you down.<br>Items like Talking Seed, Slumber Scroll, Swap Staff, and Seal Staff can be used afterward to secure a path to the stairs.</dd>
             <dt>Escape Scroll</dt>
-            <dd></dd>
+            <dd>Found on the ground on 30F, 50F, and 70F. However, there's no point in carrying it around if you're aiming for 99F.<br>That said, it can be nice to have on hand in case you find rare items like a Dragon Tile Bracelet or Upgrade Pot.</dd>
           </dl>
           <h3 id="other">Grass</h3>
           <dl>
             <dt>Revival Grass</dt>
-            <dd></dd>
+            <dd>Fully restores HP, strength, and fullness if you collapse. No effect when it's inside a pot.<br>Sometimes dropped by Mr. Gyro. Shiren 2 lacks items that fully restore HP, so stock up on as many as possible.<br>You don't want to waste these, so don't let your guard down or get careless just because you have this in your inventory.</dd>
             <dt>Herb</dt>
-            <dd></dd>
+            <dd>Healing Sword ingredient. Somewhat rare, so you'll want to identify it by checking prices inside a shop,<br>or by reading an Identify Scroll on a grass item, as opposed to eating unidentified grasses.</dd>
             <dt>Otogiriso</dt>
-            <dd></dd>
+            <dd>Restores 100 HP. Healing Sword ingredient, and provides the fantastic 弟 seal when synthesized. Pretty common.</dd>
             <dt>Life Grass</dt>
-            <dd></dd>
+            <dd>Increases max HP by 5 points, and is also a Healing Sword ingredient.<br>Somewhat rare, so don't eat unidentified grasses in case one of them happens to be this grass.</dd>
             <dt>Strength Grass</dt>
-            <dd></dd>
+            <dd>Use it with Boost Grass and Grass Gain Staff to greatly increase Shiren's strength.<br>Easy to identify, since Mr. Drone always drops this grass.</dd>
             <dt>Boost Grass</dt>
-            <dd></dd>
+            <dd>Used with Strength Grass and Grass Gain Staff to increase max strength.<br>Can also be used with Happy Grass, Angel Seed, and Life Grass, but Strength Grass should be prioritized.</dd>
             <dt>Happy Grass</dt>
-            <dd></dd>
+            <dd>Throw it at a monster early game to gain more experience points. Better to eat it yourself later on.<br>Can be thrown at a Mixer monster to level it up and increase the number of items it can swallow,<br>or to create a Mr. Gyro in hopes of it dropping a Revival Grass.</dd>
             <dt>Swift Grass</dt>
-            <dd></dd>
+            <dd>Nice to have for Monster Houses, or if you're in a room with many monsters and need to escape.</dd>
             <dt>Warp Grass</dt>
-            <dd></dd>
+            <dd>Allows you to escape from a Monster House even if there's a No Magic Statue present in the room.<br>Try to keep one on hand at all times.</dd>
             <dt>Antidote Grass</dt>
-            <dd></dd>
+            <dd>Restores lost strength due to poison arrows, Slug licks, and Scorpion stings.<br>Be sure to eat one of these before you use Strength Grass so that you increase max strength.</dd>
             <dt>Sight Grass</dt>
-            <dd></dd>
+            <dd>Best to eat it at the beginning of a floor.<br>Use it on 9F to look for a Poison Arrow Trap, which can be used to lower Nigiri Morph's strength and obtain riceballs.<br>Can also be used to look for Pitfalls, or a Trip Stone if you have a Dragon Tile Bracelet and want to collect items.</dd>
           </dl>
           <h3 id="other">Pot</h3>
           <dl>
             <dt>Storage Pot</dt>
-            <dd></dd>
+            <dd>One of the most important items in the game, since it lets you expand your inventory.<br>Easily identified by looking inside a pot and checking for a sound effect by pressing the L button.</dd>
             <dt>Identify Pot</dt>
-            <dd></dd>
+            <dd>Somewhat common pot that lets you identify multiple items. Prioritize grasses, bracelets, and staves.</dd>
             <dt>Degrade Pot</dt>
-            <dd></dd>
+            <dd>It might appear useless at first glance, but it can be used to store riceballs and grasses,<br>along with unneeded bracelets or other items to sell when you come across a shop.</dd>
             <dt>Grass Effect Pot</dt>
-            <dd></dd>
+            <dd>Can be used to weaken en entire Monster House by inserting grasses like Twisty Grass or Poison Grass,<br>or to deal 100 damage to all monsters in a Ghost House by inserting Otogiriso.<br>Also used as a container for non-grass items.</dd>
             <dt>Presto Pot</dt>
-            <dd></dd>
+            <dd>Insert unneeded items or single arrows to transform them into different items.<br>The probability is low, but it's possible to obtain items like Scout Bracelet or Echo Shield from a Presto Pot.<br>The Presto Pot item table is narrowed down inside Golden Intervals.</dd>
             <dt>Monster Pot</dt>
-            <dd></dd>
+            <dd>Armordillo Pop lets you obtain an item from every monster you encounter.<br>Mixergon is another good option that allows you to synthesize all you want.<br>You can make Mixergon trip by using a Trip Statue, Posession Staff on an Armordillo,<br>Trip Stone and either Dragon Tile Bracelet or rolling a Cannonball with a Pierce Bracelet equipped, etc.</dd>
             <dt>Upgrade Pot</dt>
-            <dd></dd>
+            <dd>Incredibly rare item that can only be found in shops between 71~90F.<br>Stock up on Restock and Blank scrolls using an Armordillo Pop if you want to try to obtain one,<br>but it's common to go through 20 Restock Scrolls and still not see it, so you'll likely need to make multiple trips.</dd>
           </dl>
           <h2 id="important_items">Identifying Items</h2>
-          <p>Text</p>
+          <p>Most items inside this dungeon are found unidentified, so it's important to learn how to<br>identify using techniques rather than solely relying on items like Identify Pot and Identify Scroll.<br>You can compare prices, check for specific effects, or narrow down possibilities based on what you've found.<br>The only items that are found in an identified state are projectiles, riceballs, Blank Scroll, and Escape Scroll.</p>
           <h3 id="weapon">Weapon + Shield</h3>
-          <p>Text</p>
+          <p>The name is already identified, but you won't know if it's cursed until you either equip it or fully identify it.<br>So it's best to wait to equip a weapon or shield until you find a Strip Trap, or until you reach a floor<br>where Kengo family monsters can be found.</p>
+          <p>You can also check for curses or upgrade values by comparing prices inside a shop.<br>If the selling price is higher than the listed price, it has a positive upgrade value,<br>but if it's lower, it's either cursed or has a negative upgrade value.</p>
+          <p>See the <a href="">Price Chart</a> page for weapon and shield prices.</p>
           <h3 id="other">Bracelet</h3>
           <dl>
             <dt>Price Identification</dt>
@@ -689,7 +691,7 @@
               <td>1500</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
+              <td>★ Identified by price.</td>
             </tr>
             <tr>
               <td>Pierce Bracelet</td>
@@ -697,19 +699,17 @@
               <td rowspan="3">2000</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="3">Related to throwing items. Dangerous if cursed.<br>No Control appears in shops between 71~90F.<br>Dragon Tile is a shop exclusive, and only appears until 29F.<br>Pierce doesn't appear in shops between 30~70F.</td>
             </tr>
             <tr>
               <td>No Control Bracelet</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Dragon Tile Bracelet</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Salty Bracelet</td>
@@ -717,31 +717,27 @@
               <td rowspan="5">2500</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="5">Salty and Heal are the two good ones in this group.<br>Heal is a shop exclusive, and only appears between 71~90F.<br>Bend Bracelet appears in shops between 71~90F.</td>
             </tr>
             <tr>
               <td>Bend Bracelet</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Breadcrumb Bracelet</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Heal Bracelet</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Song Bracelet</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Strength Bracelet</td>
@@ -749,7 +745,7 @@
               <td>3400</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td>★ Identified by price.</td>
             </tr>
             <tr>
               <td>Bullseye Bracelet</td>
@@ -757,7 +753,7 @@
               <td>3000</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
+              <td>★ Identified by price. Shop exclusive.</td>
             </tr>
             <tr>
               <td>Phantasm Bracelet</td>
@@ -765,13 +761,12 @@
               <td rowspan="2">5000</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="2">Easily identified by equipping.<br>They're both valuable, so you'll want to equip it only when<br>you have a way to unequip it in the event it's cursed.</td>
             </tr>
             <tr>
               <td>Scout Bracelet</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Paper Thin Bracelet</td>
@@ -779,25 +774,22 @@
               <td rowspan="4">7500</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="4">All four are shop exclusive.<br>Paper Thin and Parry appear in shops until 29F.<br>Hunger appears in shops between 30~70F.<br>No Hunger appears in shops between 71~90F.</td>
             </tr>
             <tr>
               <td>Parry Bracelet</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>No Hunger Bracelet</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Hunger Bracelet</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
           </table>
           <p>Identified by price:</p>
@@ -873,10 +865,11 @@
               <td>Parry Bracelet</td>
             </tr>
           </table>
+          <p class="dungeon_table_notes">※ Phantasm Bracelet can also be obtained from a Presto Pot or Surprise Pot.</p>
           <dl>
             <dt>Equip Identification</dt>
           </dl>
-          <p>Text</p>
+          <p>Equipping a bracelet won't reveal its name, so an Identify Scroll, Pot, or Statue must be used to fully identify it.<br>Some bracelets like No Control and Breadcrumb have negative effects and could be troublesome if they're cursed,<br>so you'll generally want to avoid equipping unidentified bracelets until you have a way to unequip them if needed.<br>Many bracelets don't have an immediate effect, so you might be introducing risk to your adventure without any reward.<br>However, if you find a Strip Trap, go ahead and attempt to identify your bracelets by looking at the following tables.</p>
           <p>Identified by equipping:</p>
           <table>
             <tr>
@@ -954,23 +947,23 @@
             </tr>
             <tr>
               <td>Level Lock Bracelet</td>
-              <td></td>
+              <td>Blocked Twisty Hani or Gazelle Pope's level down special attacks.</td>
             </tr>
             <tr>
               <td>Salty Bracelet</td>
-              <td></td>
+              <td>Blocked Slug licks or Sheep Priest's strength lowering spell.</td>
             </tr>
             <tr>
               <td>Song Bracelet</td>
-              <td></td>
+              <td>Blocked Hunger Puppet's special attack from lowering fullness.</td>
             </tr>
             <tr>
               <td>Bullseye Bracelet</td>
-              <td></td>
+              <td>Thrown items always hit the target.</td>
             </tr>
             <tr>
               <td>Parry Bracelet</td>
-              <td></td>
+              <td>Damage toward Shiren was redirected to a different enemy.</td>
             </tr>
           </table>
           <h3 id="other">Staff</h3>
