working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -753,7 +753,7 @@
               <td>3000</td>
               <td>×</td>
               <td>○</td>
-              <td>★ Identified by price. Shop exclusive.</td>
+              <td>★ Shop exclusive, and identified by price.</td>
             </tr>
             <tr>
               <td>Phantasm Bracelet</td>
@@ -967,9 +967,13 @@
             </tr>
           </table>
           <h3 id="other">Staff</h3>
-          <p>Text</p>
+          <p>Staves can be used to escape tricky situations, so identify them whenever you're able to do so.<br>It's best to swing them at a level 2 monster at least 2 tiles away so that you can<br>differentiate between Unlucky Staff, Quarter Staff, and Pull Staff.<br>It's also good to swing staves near the stairs so that you can run away if it happened to be a Happy Staff.</p>
+          <p>A staff with the [Insert] menu option is either a Grass Toss Staff or Grass Gain Staff.<br>It's difficult to tell them apart, but Grass Gain Staff costs slightly more than Grass Toss Staff,<br>so you can try to identify which one it is by checking the price inside of a shop.<br>It's best to fully identify it before wasting one of its uses.</p>
+          <p>See the <a href="">Price Chart</a> page for staff prices.</p>
           <h3 id="other">Scroll</h3>
-          <p>Text</p>
+          <p>Shiren 2 doesn't have the negative effect scrolls like making you unable to pick up items<br>or increasing enemy movement speed which can be seen in some of the other games in the series.<br>However, you might find yourself surrounded by monsters if it happened to be a Wall Collapse Scroll,<br>so it's best to read scrolls after you've explored the current floor and have defeated some monsters.</p>
+          <p>Wait until 9F to read unidentified scrolls in case you get lucky with a Wall Collapse Scroll and find a Golden Stairs.<br>If you find a shop, go ahead and read scrolls that aren't in the price range of a Wall Collapse Scroll.<br>Though you may want to keep 500G and 1000G scrolls on hand in case you run into a Monster House.</p>
+          <p>Note that Explosion and Sanctuary scrolls will stick to the ground if you check prices by placing them on the floor.<br>Place a Storage Pot down, check its price, and then insert a scroll and subtract the Pot's price if you want to be safe.</p>
           <p>Scroll price chart (<b>F</b>loor, <b>P</b>resto, S<b>U</b>rprise, <b>S</b>hop, <b>T</b>rader):</p>
           <table>
             <tr>
@@ -992,7 +996,7 @@
               <td>×</td>
               <td>×</td>
               <td>×</td>
-              <td></td>
+              <td rowspan="4">Lightning, Blaze, and Squid Sushi appear in shops between 71~90F.<br>Don't read these scrolls inside a shop, since it could be a Blaze Scroll.<br>Nice to have early game in case you encounter a Monster House.</td>
             </tr>
             <tr>
               <td>Lightning Scroll</td>
@@ -1001,7 +1005,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Blaze Scroll</td>
@@ -1010,7 +1013,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Squid Sushi Scroll</td>
@@ -1019,7 +1021,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Exorcism Scroll</td>
@@ -1030,7 +1031,7 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="5">Decoy appears in shops between 71~90F.<br>Could be a Decoy or Fear scroll to escape bad situations.</td>
             </tr>
             <tr>
               <td>Freeze Scroll</td>
@@ -1039,7 +1040,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Decoy Scroll</td>
@@ -1048,7 +1048,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Trap Remove Scroll</td>
@@ -1057,7 +1056,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Fear Scroll</td>
@@ -1066,7 +1064,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Escape Scroll</td>
@@ -1075,7 +1072,7 @@
               <td>×</td>
               <td>×</td>
               <td>×</td>
-              <td></td>
+              <td>★ Always found identified.</td>
             </tr>
             <tr>
               <td>Heaven Scroll</td>
@@ -1086,7 +1083,7 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="3">No harm in reading any of these.<br>Could be a Slumber Scroll to escape a bad situation.</td>
             </tr>
             <tr>
               <td>Earth Scroll</td>
@@ -1095,7 +1092,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Slumber Scroll</td>
@@ -1104,7 +1100,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Evaporate Scroll</td>
@@ -1115,7 +1110,7 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="2">★ Identified by price and whether or not it sticks to the ground.</td>
             </tr>
             <tr>
               <td>Explosion Scroll</td>
@@ -1124,7 +1119,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Wall Collapse Scroll</td>
@@ -1135,7 +1129,7 @@
               <td>○</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="3">Read these on floors where Golden Stairs have a chance to appear.</td>
             </tr>
             <tr>
               <td>Sturdy Pot Scroll</td>
@@ -1144,7 +1138,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Pot Expand Scroll</td>
@@ -1155,7 +1148,6 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Suction Scroll</td>
@@ -1166,7 +1158,7 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td>★ Identified by price.</td>
             </tr>
             <tr>
               <td>Plating Scroll</td>
@@ -1177,7 +1169,7 @@
               <td>○</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="2">Read these when you're inside a shop.</td>
             </tr>
             <tr>
               <td>Restock Scroll</td>
@@ -1186,7 +1178,6 @@
               <td>○</td>
               <td>×</td>
               <td>○</td>
-              <td></td>
             </tr>
             <tr>
               <td>Blank Scroll</td>
@@ -1197,7 +1188,7 @@
               <td>×</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td>★ Always found identified.</td>
             </tr>
             <tr>
               <td>Sanctuary Scroll</td>
@@ -1208,7 +1199,7 @@
               <td>×</td>
               <td>○</td>
               <td>○</td>
-              <td></td>
+              <td rowspan="2">Sanctaruy appears in shops between 71~90F.<br>Both stick to the floor when placed on the ground.</td>
             </tr>
             <tr>
               <td>Sanctaruy Scroll</td>
@@ -1217,7 +1208,6 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
             </tr>
             <tr>
               <td>Extinction Scroll</td>
@@ -1228,10 +1218,10 @@
               <td>×</td>
               <td>○</td>
               <td>×</td>
-              <td></td>
+              <td>★ Shop exclusive, and identified by price.</td>
             </tr>
           </table>
-          <p class="dungeon_table_notes">* Text</p>
+          <p class="dungeon_table_notes">* Escape Scrolls are always found identified, and only appear on 30F, 50F, and 70F.</p>
           <h3 id="other">Grass</h3>
           <p>Text</p>
           <p>Grass price chart:</p>
